# kata

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  test.ks
katars/: Cargo.toml
katars/src/: main.rs
katars/src/ks/: ast.rs  error.rs  eval.rs  intern.rs  interpreter.rs  lexer.rs  mod.rs  native.rs  numeric.rs  parser.rs  scope.rs  types.rs  value.rs
katars/src/ks/interpreter/: access.rs  call.rs  expr.rs  imports.rs  match_.rs  method_id.rs  mod.rs  registration.rs  stmt.rs  types_protocol.rs  types_resolve.rs
katars/src/tui/: mod.rs
katars/tests/: conformance.rs  snapshots.rs
katars/tests/snaps/: errors.rs  helpers.rs  output.rs
katars/tests/snaps/snapshots/: snap_errors__bail_outside_loop.snap  snap_errors__break_outside_loop.snap  snap_errors__cont_outside_loop.snap  snap_errors__continue_outside_loop.snap  snap_errors__deeply_nested_undefined.snap  snap_errors__division_by_zero.snap  snap_errors__empty_array.snap  snap_errors__enum_type_mismatch.snap  snap_errors__error_inside_function.snap  snap_errors__error_on_later_line.snap  snap_errors__func_param_type_mismatch.snap  snap_errors__func_wrong_arity.snap  snap_errors__generic_method_type_error.snap  snap_errors__index_not_indexable.snap  snap_errors__index_out_of_bounds.snap  snap_errors__index_set_out_of_bounds.snap  snap_errors__interp_type_error.snap  snap_errors__interp_undefined.snap  snap_errors__match_body_error.snap  snap_errors__mixed_array.snap  snap_errors__nested_expr_error.snap  snap_errors__no_match_arm.snap  snap_errors__no_such_attr.snap  snap_errors__ret_outside_func.snap  snap_errors__span_chained_attr.snap  (+19 more)
katars/tests/snapshots/: snapshots__error_break_outside_loop.snap  snapshots__error_division_by_zero.snap  snapshots__error_empty_array.snap  snapshots__error_enum_type_mismatch.snap  snapshots__error_interp_undefined.snap  snapshots__error_mixed_array.snap  snapshots__error_no_match_arm.snap  snapshots__error_ret_outside_func.snap  snapshots__error_try_non_opt.snap  snapshots__error_type_mismatch_binop.snap  snapshots__error_undefined_variable.snap  snapshots__error_unknown_module.snap
(+698 files in other folders)
