[package]
name = "katars"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "kata"
path = "src/main.rs"

[dependencies]
# Parsing: logos for lexing, chumsky for parsing, ariadne for error reporting
logos   = "0.16"
chumsky = { version = "0.12", features = ["pratt"] }
ariadne = { version = "0.4", features = ["auto-color"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Structured logging
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Serialization
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
toml       = "0.8"
indexmap = { version = "2.13.0", features = ["serde"] }
num-bigint = { version = "0.4.6", features = ["serde"] }
half = { version = "2", features = ["serde"] }
num-traits = "0.2"
dirs = "6.0.0"
owo-colors = "4.3.0"
reedline = "0.46.0"
nu-ansi-term = "0.50.3"

[dev-dependencies]
datatest-stable = "0.2"
insta = "1.46.3"

[[test]]
name    = "conformance"
harness = false

[[test]]
name = "snap_errors"
path = "tests/snaps/errors.rs"

[[test]]
name = "snap_output"
path = "tests/snaps/output.rs"
